# mcp-sgu-open-data

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.template  README.md  cloudbuild.yaml  pyproject.toml
.github/: copilot-instructions.md
scripts/: verify_sgu.py
src/mcp_sgu/: __init__.py  app.py  auth.py  cache.py  config.py  coordinates.py  exports.py  field_defs.py  filters.py  geocoding.py  logging_config.py  pagination.py  sgu_client.py
src/mcp_sgu/tools/: create_export.py  explain_field.py  get_dataset_metadata.py  get_well.py  get_well_layers.py  resolve_address.py  search_wells.py  summarize_well_area.py
tests/: conftest.py  test_auth.py  test_config.py  test_coordinates.py  test_exports.py  test_field_defs.py  test_geocoding.py  test_health.py  test_pagination.py  test_sgu_client.py  test_tools.py
