[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-sgu-open-data"
version = "0.1.0"
description = "MCP server exposing SGU geological open data (Brunnar)"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.0,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "starlette>=0.41.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "pyproj>=3.6.0,<4.0.0",
    "python-multipart>=0.0.12,<1.0.0",
    "sse-starlette>=2.1.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-httpx>=0.35.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "ruff>=0.7.0,<1.0.0",
]

[project.scripts]
mcp-sgu = "mcp_sgu.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_sgu"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101", "B008", "S104", "UP046", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B"]
